--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,17 +27,19 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
-    // Retrofit2 library
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    // A converter which uses Gson for serialization to and from JSON.
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    // RxJava adapter for retrofit
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    // RxJava libraries
-    implementation 'io.reactivex:rxjava:1.2.3'
-    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     implementation 'com.jakewharton.rxbinding:rxbinding-design:0.4.0'
+
+
 }
